--- a/mcp-config.json
+++ b/mcp-config.json
@@ -1,6 +1,6 @@
 {
   "mcpServers": {
-    "audio-processor": {
+    "audio-processor-gpu": {
       "command": "docker",
       "args": [
         "run",
@@ -14,7 +14,21 @@
         "${PWD}/output:/app/output",
         "audio-processor-mcp"
       ],
-      "description": "MCP server for audio layer manipulation with CUDA acceleration"
+      "description": "MCP server for audio layer manipulation with CUDA acceleration (requires NVIDIA GPU and nvidia-docker)"
+    },
+    "audio-processor-cpu": {
+      "command": "docker",
+      "args": [
+        "run",
+        "--rm",
+        "-i",
+        "-v",
+        "${PWD}/input:/app/input",
+        "-v",
+        "${PWD}/output:/app/output",
+        "audio-processor-mcp"
+      ],
+      "description": "MCP server for audio layer manipulation (CPU-only)"
     }
   }
 }
