--- a/mcp-config.json
+++ b/mcp-config.json
@@ -12,7 +12,7 @@
         "${PWD}/input:/app/input",
         "-v",
         "${PWD}/output:/app/output",
-        "audio-processor-mcp"
+        "ghcr.io/pmacled/tool-audio-processor:latest"
       ],
       "description": "MCP server for audio layer manipulation with CUDA acceleration (requires NVIDIA GPU and nvidia-docker)"
     },
@@ -26,7 +26,7 @@
         "${PWD}/input:/app/input",
         "-v",
         "${PWD}/output:/app/output",
-        "audio-processor-mcp"
+        "ghcr.io/pmacled/tool-audio-processor:latest"
       ],
       "description": "MCP server for audio layer manipulation (CPU-only)"
     }
