run container as host user instead of root to prevent permission issues

--- a/mcp-config.json
+++ b/mcp-config.json
@@ -6,6 +6,8 @@
         "run",
         "--rm",
         "-i",
+        "--user",
+        "1000:1000",
         "--gpus",
         "all",
         "-v",
@@ -22,6 +24,8 @@
         "run",
         "--rm",
         "-i",
+        "--user",
+        "1000:1000",
         "-v",
         "${PWD}/input:/app/input",
         "-v",
