--- a/mcp-config.json
+++ b/mcp-config.json
@@ -6,8 +6,10 @@
         "run",
         "--rm",
         "-i",
-        "--user",
-        "1000:1000",
+        "-e",
+        "HOST_UID=1000",
+        "-e",
+        "HOST_GID=1000",
         "--gpus",
         "all",
         "-v",
@@ -24,8 +26,10 @@
         "run",
         "--rm",
         "-i",
-        "--user",
-        "1000:1000",
+        "-e",
+        "HOST_UID=1000",
+        "-e",
+        "HOST_GID=1000",
         "-v",
         "${PWD}:/workspace",
         "-w",
