--- a/requirements.txt
+++ b/requirements.txt
@@ -19,5 +19,14 @@ scipy>=1.10.0
 mido>=1.3.0
 pretty_midi>=0.2.10
 
+# Audio-to-MIDI conversion
+basic-pitch>=0.3.0
+
+# Music notation and theory
+music21>=9.1.0
+
+# Advanced pitch tracking
+crepe>=0.0.13
+
 # Utilities
 python-dotenv>=1.0.0
