--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ scipy>=1.10.0
 # MIDI handling
 mido>=1.3.0
 pretty_midi>=0.2.10
+pyfluidsynth>=1.3.0
 
 # Audio-to-MIDI conversion
 basic-pitch>=0.3.0
