--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,51 @@
 # MCP Framework
-fastmcp>=0.1.0,<1.0.0
+fastmcp>=2.14.2,<3.0.0
 
 # Audio Processing
-demucs>=4.0.0,<5.0.0
-librosa>=0.10.0,<1.0.0
-soundfile>=0.12.0,<1.0.0
+demucs~=4.0.1
+librosa~=0.11.0
+soundfile~=0.13.1
 
-# PyTorch with CUDA support
-torch>=2.0.0,<3.0.0
-torchaudio>=2.0.0,<3.0.0
+# PyTorch with CUDA support (installed separately via pip install torch torchaudio --index-url)
+torch~=2.5.1
+torchaudio~=2.5.1
 
 # Audio manipulation and effects
-pydub>=0.25.0,<1.0.0
-numpy>=1.24.0,<2.0.0
-scipy>=1.10.0,<2.0.0
+pydub~=0.25.1
+numpy~=1.26.4
+scipy~=1.17.0
 
 # MIDI handling
-mido>=1.3.0,<2.0.0
-pretty_midi>=0.2.10,<1.0.0
-pyfluidsynth>=1.3.0,<2.0.0
+mido~=1.3.3
+pretty_midi~=0.2.11
+pyfluidsynth~=1.3.4
 
 # Audio-to-MIDI conversion
-basic-pitch>=0.3.0,<1.0.0
+basic-pitch~=0.4.0
 
 # Music notation and theory
-music21>=9.1.0,<10.0.0
+music21~=9.9.1
 
 # Advanced pitch tracking
-crepe>=0.0.13,<1.0.0
+crepe~=0.0.16
 
 # Utilities
-python-dotenv>=1.0.0,<2.0.0
+python-dotenv~=1.2.1
 
 # Vocal separation models
-audio-separator>=0.18.0,<1.0.0
-onnxruntime-gpu>=1.16.0,<2.0.0
-gdown>=4.7.0,<5.0.0
+# Manually manage beartype to resolve conflict between audio-separator and fastmcp
+beartype>=0.20.0  # Required by fastmcp, compatible with audio-separator if installed without deps
+# Install audio-separator without dependencies in Dockerfile with --no-deps flag
+# But install its other dependencies here:
+diffq>=0.2
+ml-collections
+onnx>=1.14
+onnx2torch>=1.5
+rotary-embedding-torch>=0.6.1,<0.7.0
+samplerate==0.1.0
+onnxruntime-gpu==1.23.0
+gdown==4.7.3
 
 # TensorFlow/Keras for SATB models
-# Pinned to specific versions for stable dependency resolution and security
-# TensorFlow 2.18.0 supports Python 3.11, CUDA 12.1, and Keras 3.12+
-# Keras 3.12.0 addresses multiple security vulnerabilities (path traversal, code execution)
-tensorflow==2.18.0
-keras==3.12.0
+tensorflow==2.15.0.post1
+keras==2.15.0
